load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//internal:render_html.bzl", "render_html")

pkg_files(
    name = "files",
    srcs = glob(
        ["*.md"],
    ),
)

pkg_filegroup(
    name = "src",
    srcs = [":files"],
    visibility = ["//visibility:public"],
)

render_html(
    name = "html",
    src = ":src",
    package = "",
)

pkg_tar(
    name = "dist",
    srcs = [":html"],
    visibility = ["//visibility:public"],
)
